--- a/css/main.css
+++ b/css/main.css
@@ -13,34 +13,33 @@ header {
     background: url(../images/header-bg.jpg) no-repeat center;
     background-size: cover;
     width: 100%;
-    position: relative;
 }
 
-.header-wrapper {
+.wrapper {
     max-width: 940px;
     margin: 0 auto;
 }
 
-.header-wrapper>p {
+p.logo {
     padding-top: 20px;
 }
 
 nav {
     margin-top: -31px;
-    padding-bottom: 160px;
+    padding-bottom: 165px;
 }
 
 nav li {
     display: inline;
-    padding: 42px 10px 5px;
+    padding: 41px 10px 5px;
     transition: background .3s;
 }
 
-nav li:hover, nav li:first-child {
+header li:hover, header li:first-child {
     background: #3f9fc9;
 }
 
-#text_slide1, #text_slide2, #text_slide3, #text_slide4 {
+h1 {
     width: 100%;
     position: absolute;
     left: 0;
@@ -51,11 +50,10 @@ nav li:hover, nav li:first-child {
 .h-icons {
     text-align: center;
     padding-top: 320px;
-    padding-bottom: 190px;
+    padding-bottom: 185px;
 }
 
 .h-icons img {
-    display: inline;
     margin-right: 15px;
 }
 
@@ -63,11 +61,89 @@ img[alt="in"] {
     margin-right: 0;
 }
 
-header::after {
+/*** начало блока about
+    ==================== ***/
+
+#about {
+    background: #f17c72;
+    width: 100%;
+    position: relative;
+}
+
+#about::before {
     content: '';
     width: 0;
     height: 0;
-    border-top: 40px solid #222;
+    border-top: 40px solid #241912;
+    border-right: 55px solid transparent;
+    border-bottom: 55px solid transparent;
+    border-left: 55px solid transparent;
+    position: absolute;
+    left: 50%;
+    margin-left: -55px;
+}
+
+#about li:hover, #about li:nth-last-child(4) {
+    background: #e6655e;
+}
+
+h2+p {
+    padding: 40px 0 110px;
+}
+
+.services {
+    background: #2aae96;
+    padding: 0 7px;
+}
+
+.clients {
+    background: #7f4c76;
+    padding: 0 7px;
+}
+
+p>a {
+    color: #f8291a;
+}
+
+.team {
+    padding-bottom: 190px;
+}
+.senior-manager, .manager, .accounter, .director {
+    background: #e6655e;
+    border: 4px solid #f4948b;
+    display: inline-block;
+    width: 220px;
+    margin-right: 15px;
+}
+
+.director {
+    margin-right: 0;
+}
+
+.senior-manager>img, .manager>img, .accounter>img, .director>img {
+    border: 3px solid #f4948b;
+    border-radius: 50%;
+    margin: 20px 0 30px;
+}
+
+h3+p {
+    border-bottom: 2px solid #2aae96;
+    padding-bottom: 20px;
+}
+
+.a-icons {
+    padding: 21px 0;
+}
+
+.a-icons img {
+    margin-right: 5px;
+}
+
+#about::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 40px solid #f17c72;
     border-right: 55px solid transparent;
     border-bottom: 55px solid transparent;
     border-left: 55px solid transparent;
