--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ img[alt="in"] {
     margin-left: -55px;
 }
 
-#about, #services {
+#about, #services, #clients, #contacts {
     width: 100%;
     position: relative;
 }
@@ -112,7 +112,7 @@ p>a {
     padding-bottom: 190px;
 }
 
-.senior-manager, .manager, .accounter, .director {
+.worker {
     background: #e6655e;
     border: 4px solid #f4948b;
     display: inline-block;
@@ -120,11 +120,11 @@ p>a {
     margin-right: 15px;
 }
 
-.director {
+.worker:last-child {
     margin-right: 0;
 }
 
-.senior-manager>img, .manager>img, .accounter>img, .director>img {
+.worker>img {
     border: 3px solid #f4948b;
     border-radius: 50%;
     margin: 20px 0 30px;
@@ -167,7 +167,7 @@ p>a {
     background: #46dcc7;
 }
 
-.strategy, .research, .development, .consulting {
+.set {
     background: #46dcc7;
     border: 4px solid #a5dbd1;
     display: inline-block;
@@ -175,14 +175,169 @@ p>a {
     margin-right: 15px;
 }
 
-.consulting {
+.set:last-child {
     margin-right: 0;
 }
 
-.strategy>img, .research>img, .development>img, .consulting>img {
+.set>img {
     padding: 20px 0 20px;
 }
 
-.strategy p, .research p, .development p, .consulting p {
+.set>p {
     padding: 20px 5px 35px;
+}
+
+/*** начало блока clients
+    ==================== ***/
+
+#clients::before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 40px solid #32ac97;
+    border-right: 55px solid transparent;
+    border-bottom: 55px solid transparent;
+    border-left: 55px solid transparent;
+    position: absolute;
+    left: 50%;
+    margin-left: -55px;
+}
+
+#clients {
+    background: #7f4c76;
+}
+
+#clients li:hover, #clients li:nth-last-child(2) {
+    background: #b288ab;
+}
+
+#clients h2 {
+    padding-bottom: 110px;
+}
+
+.companys {
+    padding-bottom: 70px;
+}
+
+.company {
+    display: inline-block;
+    width: 220px;
+    margin-right: 15px;
+    padding-bottom: 110px;
+}
+
+.company:nth-last-child(5), .company:last-child {
+    margin-right: 0;
+}
+
+.company>img {
+    padding-bottom: 25px;
+}
+
+.company>p {
+    padding: 15px 0;
+}
+
+.companys a {
+    opacity: .4;
+    transition: opacity .2s;
+}
+
+.companys a:hover {
+    opacity: 1;
+}
+
+/*** начало блока contacts
+    ==================== ***/
+
+#contacts::before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 40px solid #7f4c76;
+    border-right: 55px solid transparent;
+    border-bottom: 55px solid transparent;
+    border-left: 55px solid transparent;
+    position: absolute;
+    left: 50%;
+    margin-left: -55px;
+}
+
+#contacts {
+    background: #3f9fc9;
+    padding-bottom: 180px;
+}
+
+#contacts li:hover, #contacts li:last-child {
+    background: #37637f;
+}
+
+.address, .form, #contacts img {
+    float: left;
+}
+
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.address h3, .form h3 {
+    padding-bottom: 40px;
+}
+
+.address p {
+    padding-bottom: 65px;
+}
+
+#contacts img {
+    padding: 60px 0 0 50px;
+}
+
+.form {
+    margin-left: 87px;
+}
+
+input[type="text"] {
+    margin-right: 10px;
+}
+
+input[placeholder] {
+    width: 14em;
+    height: 2.5em;
+    padding: 0 10px;
+}
+
+textarea {
+    width: 29.1em;
+    height: 13em;
+    resize: none;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+input[placeholder], textarea {
+    border: 0.063em solid #39596e;
+    background: #c2e8f4;
+}
+
+input[value] {
+    background: #f17c72;
+    border: 0.063em solid #b76058;
+    padding: 5px 45px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+/*** начало блока footer
+    ==================== ***/
+
+footer {
+    background: #334960;
+    width: 100%;
+    padding: 25px 0;
+}
+
+footer p {
+    padding-bottom: 7px;
 }
