--- a/css/media.css
+++ b/css/media.css
@@ -32,7 +32,7 @@
         width: 60px;
     }
     
-    .worker:nth-last-child(2), .set:nth-last-child(2) {
+    .worker:nth-of-type(3), .set:nth-of-type(3) {
         margin-right: 0;
     }
     
@@ -44,11 +44,11 @@
         padding-bottom: 100px;
     }
     
-    .company:nth-last-child(5) {
+    .company:nth-of-type(4) {
         margin-right: 15px;
     }
     
-    .company:nth-last-child(6), .company:nth-last-child(3) {
+    .company:nth-of-type(3), .company:nth-of-type(6) {
         margin-right: 0;
     }
 
@@ -96,7 +96,10 @@
 /*** 860px ***/
 
 @media screen and (max-width: 860px) {
-    #about::before, #services::before, #clients::before, #contacts::before {
+    #about::before,
+    #services::before,
+    #clients::before,
+    #contacts::before {
         border: none;
     }
     
@@ -108,11 +111,16 @@
 /*** 700px ***/
 
 @media screen and (max-width: 700px) {
-    .worker:nth-last-child(2), .set:nth-last-child(2), .company:nth-last-child(6) {
+    .worker:nth-of-type(3),
+    .set:nth-of-type(3),
+    .company:nth-of-type(3) {
         margin-right: 15px;
     }
     
-    .worker:nth-last-child(3), .set:nth-last-child(3), .company:nth-last-child(7), .company:nth-last-child(5) {
+    .worker:nth-of-type(2),
+    .set:nth-of-type(2),
+    .company:nth-of-type(2),
+    .company:nth-of-type(4) {
         margin-right: 0;
     }
 }
@@ -184,11 +192,21 @@
         padding: 5px;
     }
     
-    .worker:first-child, .worker:nth-last-child(2), .set:first-child, .set:nth-last-child(2), .company:first-child, .company:nth-last-child(6), .company:nth-last-child(4), .company:nth-last-child(2) {
+    .worker:first-child,
+    .worker:nth-of-type(3),
+    .set:first-child,
+    .set:nth-of-type(3),
+    .company:first-child,
+    .company:nth-of-type(3),
+    .company:nth-of-type(5),
+    .company:nth-of-type(7) {
         margin-right: 0;
     }
     
-    .worker:nth-last-child(2), .worker:nth-last-child(3), .set:nth-last-child(2), .set:nth-last-child(3) {
+    .worker:nth-of-type(3),
+    .worker:nth-of-type(2),
+    .set:nth-of-type(3),
+    .set:nth-of-type(2) {
         margin-top: 15px;
     }
 }
